Fix: fixed signup page overflow issue

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -59,7 +59,8 @@ nav {
   max-height: 100%;
   max-width: 100%;
   margin-top: 5%;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .main-header {
